# Thesis_ML

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  Dockerfile  Implementation Plan 5.txt  LICENSE  PROJECT_RULES.md  README.md  create_thesis_experiment_workbook.py  decision_support_experiments_README.md  decision_support_registry.json  main.ipynb  pyproject.toml  run_decision_support_experiments.py  thesis_experiment_program.xlsx  thesis_experiment_program_README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release_gate.yml
configs/: CONFIG_GOVERNANCE.md  authority_manifest.json  config_registry.json  decision_support_registry.json  decision_support_registry_revised_execution.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIRMATORY_READY.md  CONSOLIDATION_SUMMARY.md  DECISION_SUPPORT_AUTOMATION.md  EXPERIMENTS.md  EXTENDING.md  GPU_ACCELERATION_PLAN.md  LOGGING.md  MAINTAINER_GUIDE.md  MIGRATION_RELEASE_SYSTEM.md  OPERATOR_GUIDE.md  PRIVACY_AND_DATA_HANDLING.md  README.md  RELEASE.md  REPRODUCIBILITY.md  RUNBOOK.md  SCHEMA_MIGRATIONS.md  SEGMENT_EXECUTION.md  USE_AND_MISUSE_BOUNDARIES.md  WORKBOOK_WORKFLOW.md
masks_khaled_thesis/: ADOPTION_NOTES.md  updated_atlas_JulichBrainAtlas_3.0_areas_MPM_b_N10_nlin2ICBM152asym2009c_public_11035603b4744231e17e87fd8ebcaf1a.hdr
models/: README.md
notebooks/: 01_single_experiment_registry_walkthrough.ipynb  02_single_experiment_workbook_walkthrough.ipynb  E01_readiness_and_launch_notebook.ipynb  E02_readiness_and_correctness_notebook.ipynb  E03_readiness_and_scientific_strength_notebook.ipynb  README.md  benchmark_torch_ridge_backend.ipynb  end_to_end_experiment_walkthrough.ipynb  main.ipynb  s.ipynb  supervisor_pipeline_showcase.ipynb
outputs/reports/: README.md
releases/: release_registry.json
schemas/: confirmatory_protocol.schema.json  dataset_instance.schema.json  promotion_manifest.schema.json  release_bundle.schema.json  release_claims.schema.json  release_environment.schema.json  release_evidence.schema.json  release_execution.schema.json  release_science.schema.json  run_manifest.schema.json
scripts/: README.md  _common.py  acceptance_smoke.py  benchmark_torch_ridge_backend.py  bootstrap_env.ps1  bootstrap_env.sh  build_frozen_confirmatory_registry.py  build_publishable_bundle.py  create_thesis_experiment_workbook.py  freeze_workbook_registry.py  generate_demo_dataset.py  performance_smoke.py  prepare_dependent_rerun_registry.py  prepare_frozen_campaign.ps1  profile_runtime_baseline.py  rc1_release_gate.py  release_hygiene_check.py  replay_official_paths.py  review_e01_target_lock.py  review_preflight_stage.py  run_analysis_server_execution_plan.py  run_baseline.py  run_frozen_campaign.ps1  run_pytest_in_batches.py  verify_campaign_runtime_profile.py  verify_confirmatory_ready.py  verify_model_cost_policy_precheck.py  verify_official_artifacts.py  verify_official_reproducibility.py  verify_project.py  verify_publishable_bundle.py
templates/: thesis_experiment_program.xlsx  thesis_experiment_program_revised.xlsx
testing_notebooks/: canonical_protocol_manual_validation.ipynb  framework_mode_manual_validation.ipynb
tests/: _config_refs.py  _release_test_utils.py  test_anomaly_engine_event_rules.py  test_anomaly_engine_terminal_rules.py  test_anomaly_jsonl_and_report.py  test_architecture_modularity.py  test_archive_retirement_policy.py  test_artifact_registry.py  test_artifact_registry_model_bundle.py  test_authority_manifest.py  test_backend_registry.py  test_baseline_pipeline.py  test_build_frozen_confirmatory_registry.py  test_campaign_cli_compute_controls.py  test_campaign_cli_config_alias.py  test_campaign_execution_report.py  test_campaign_runner_facade.py  test_campaign_runtime_profile.py  test_claim_evaluator.py  test_cli_timeout_semantics.py  test_comparison_decision.py  test_comparisons.py  test_compute_capabilities.py  test_compute_policy.py  test_compute_scheduler.py  test_config_alias_resolution.py  test_config_bundle_rules.py  test_config_lifecycle_identity.py  test_config_reference_policy.py  test_config_registry.py  test_confirmatory_anchor_set_contract.py  test_confirmatory_ready.py  test_confirmatory_scope_runtime_alignment.py  test_confirmatory_selection_bundle.py  test_confirmatory_thesis_artifacts_selection.py  test_console_reporter.py  test_data_layer.py  test_dataset_manifest.py  test_decision_support_anomalies.py  test_decision_support_dry_run_semantics.py  (+108 more)
thesis_agent_setup/: THESIS_PROGRAM.md
(+369 files in other folders)
