[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Thesis_ML"
version = "0.1.0"
description = "Local-only ML investigation baseline for Thesis_ML."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "nibabel>=5.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
spm = [
    "scipy>=1.13",
]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
thesisml-extract-glm = "Thesis_ML.spm.extract_glm:main"
thesisml-build-index = "Thesis_ML.data.index_dataset:main"
thesisml-cache-features = "Thesis_ML.features.nifti_features:main"
thesisml-run-experiment = "Thesis_ML.experiments.run_experiment:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
