[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Thesis_ML"
version = "0.1.0"
description = "Local-only ML investigation baseline for Thesis_ML."
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "nibabel>=5.2",
    "scikit-learn>=1.5",
    "openpyxl>=3.1",
    "pydantic>=2.8",
]

[project.optional-dependencies]
spm = [
    "scipy>=1.13",
]
optuna = [
    "optuna>=4.0",
]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
]

[project.scripts]
thesisml-extract-glm = "Thesis_ML.spm.extract_glm:main"
thesisml-build-index = "Thesis_ML.data.index_dataset:main"
thesisml-cache-features = "Thesis_ML.features.nifti_features:main"
thesisml-run-experiment = "Thesis_ML.experiments.run_experiment:main"
thesisml-run-protocol = "Thesis_ML.cli.protocol_runner:main"
thesisml-run-decision-support = "Thesis_ML.cli.decision_support:main"
thesisml-run-baseline = "Thesis_ML.cli.baseline:main"
thesisml-workbook = "Thesis_ML.cli.workbook:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Thesis_ML = [
    "assets/configs/*.json",
    "assets/templates/*.xlsx",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["scripts", "src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = [
    "src/Thesis_ML/artifacts",
    "src/Thesis_ML/protocols",
    "src/Thesis_ML/orchestration",
    "src/Thesis_ML/workbook",
    "src/Thesis_ML/cli/protocol_runner.py",
    "src/Thesis_ML/spm/extract_glm.py",
    "src/Thesis_ML/features/nifti_features.py",
    "src/Thesis_ML/experiments/run_experiment.py",
    "src/Thesis_ML/experiments/segment_execution.py",
    "src/Thesis_ML/experiments/sections.py",
]
